Updated csv and code

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -50,20 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-985761b27133>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-985761b27133>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    sklearn (sci kit learn)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Use sklearn (sci kit learn)"
+    "#Use sklearn (sci kit learn)\n",
+    "import csv\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "dataFrame = pd.read_csv('DRD2_subset_data.csv', delimiter='\\t')\n",
+    "#data = dataFrame.dropna(subset=['P','Q','VS','DRD2'])\n",
+    "data = dataFrame.dropna()\n",
+    "pd.set_option('display.max_rows',466)\n"
    ]
   },
   {
